examples/springboot/k8s/fargate/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petstore-fargate
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petstore-fargate
      infra: fargate
  template:
    metadata:
      labels:
        app: petstore-fargate
        infra: fargate
    spec:
      containers:
        - name: petstore
          image: 373534280245.dkr.ecr.ap-northeast-1.amazonaws.com/lambda-http-ric-example/springboot2-petstore:petstorefunction-678656161559-java8.al2-maven-v1
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "10Gi"
              cpu: "4"
