examples/springboot/k8s/fargate/service.yml
apiVersion: v1
kind: Service
metadata:
  name: petstore-fargate-svc
spec:
  selector:
    app: petstore-fargate
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
